--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-TW">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/all.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>關於小精靈</title>
+  <link rel="stylesheet" href="css/all.css" />
 </head>
-
 <body>
-    <div class="header"></div>
-    <!-- 這裡寫入首頁列表區塊 -->
-    <div class="footer"></div>
-</body>
+  <nav class="navbar">
+    <div class="container">
+      <h1 class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">小精靈</a></h1>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="about.html">關於我</a></li>
+        <li><a href="education.html">學歷</a></li>
+        <li><a href="experience.html">工作經歷</a></li>
+        <li><a href="skills.html">技能&工具</a></li>
+        <li><a href="porfolio.html">作品集</a></li>
+        <li><a href="contact.html">聯絡我</a></li>
+      </ul>
+      <div class="hamburger" id="hamburger">&#9776;</div>
+    </div>
+  </nav>
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="content">
+      <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&w=160&h=160&fit=crop" alt="人像照片" style="width:120px;height:120px;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.15);margin-bottom:1rem;">
+      <h1>您好，我是 小精靈</h1>
+      <p>網頁設計師 & 全端開發者</p>
+    </div>
+  </header>
 
+  <footer>
+    <p>© 2025 小精靈. All rights reserved.</p>
+  </footer>
+  <script src="js/all.js"></script>
+</body>
 </html>
